fix(differ): 테이블 키 null 방어 추가 - constraintName 정규화 시 공백 트리밍 누락 개선 - 집합 동등성 보장 누락: 컬럼 키 중복 제거(distinct)